--- a/.travis.yml
+++ b/.travis.yml
@@ -18,22 +18,17 @@ before_install:
 install:
   - mkdir -p ~/esp
   - cd ~/esp
-  # Download binary toolchain for the ESP32
-  - wget https://dl.espressif.com/dl/xtensa-esp32-elf-linux64-1.22.0-80-g6c4433a-5.2.0.tar.gz
-  - tar -xzf xtensa-esp32-elf-linux64-1.22.0-80-g6c4433a-5.2.0.tar.gz
-  # Make xtensa-esp32-elf available for all terminal sessions
-  - export PATH=$PATH:$HOME/esp/xtensa-esp32-elf/bin
-  # Get ESP-IDF v3.3.1
-  - git clone --branch v3.3.1 --recursive https://github.com/espressif/esp-idf.git
-  # Set the path to ESP-IDF directory
-  - export IDF_PATH=~/esp/esp-idf 
-  # Install Required Python Packages
-  - python -m pip install --user -r $IDF_PATH/requirements.txt
-
+  # Get ESP-IDF release/v4.4
+  - git clone --branch release/v4.4 --recursive https://github.com/espressif/esp-idf.git
+  # Set up IDF
+  - cd esp-idf
+  - ./install.sh esp32
+  - . ./export.sh
 
 script:
   - cd $PROJECT_PATH
-  - make firmware
+  - idf.py build
+  - python combine.py
 
 deploy:
   provider: releases
