--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
   pull_request:
+  # release:
+  #   types: [published]
 
 jobs:
   build:
@@ -36,13 +38,20 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           python combine.py
-
-      - name: Deploy
-        uses: actions/upload-release-asset@v1
+      
+      - name: upload build artifacts zip
+        uses: actions/upload-artifact@v2
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./NINA_W102-*.bin
-          asset_name: NINA_W102-$(date +'%Y-%m-%d-%H-%M-%S').bin
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: build-files
+          path: |
+              NINA_W102-*.bin
+
+      # - name: Deploy
+      #   uses: actions/upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ github.event.release.upload_url }}
+      #     asset_path: ./NINA_W102-*.bin
+      #     asset_name: NINA_W102-$(date +'%Y-%m-%d-%H-%M-%S').bin
+      #     asset_content_type: application/octet-stream
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
